2006-06-03  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h:
	fix POP3 TOP command (closes: #330)

2006-06-02  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-imapsession.c, dbmail-mailbox.c, dbmail-message.c,
	imapcommands.c, list.c, misc.c, user.c:
	Accepted g_string_* memory cleanup patch by kaname (closes bug #355).
	* dm_imaputil.c:
	Accepted g_object_unref patch by ryo (from bug #139).
	* auth.h, authmodule.c, authmodule.h, modules/authldap.c,
	modules/authsql.c:
	Added function auth_get_aliases_ext (for bug #174).
	* dm_match.h, dm_match.c, dbmail.h.in, Makefile.am:
	Added functions match_glob and match_glob_list (for bug #174).
	* check_dbmail_user.c, dbmail-user.c:
	Handle wildcards ? and * for aliases and forwards (closes bug #174).

2006-06-01  Paul J Stevens <paul@nfg.nl>

	* debian/:
	debian cleanups
	* dbmail-mailbox.c, dbmail-message.c, dm_imaputil.c:
	add g_object_unref calls (bug #139)

2006-05-27  Paul J Stevens <paul@nfg.nl>

	* debian/control, debian/rules:
	fix debian setup so we can build on ubuntu breezy
	* man/dbmail-timsieved.txt:
	fix typo in dbmail-timsieved.txt
	* modules/dbsqlite.c:
	add missing function to sqlite module
	* dbmail-message.c:
	disable savepoint support for now

2006-05-26  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.h, sievecmd.c:
	Added new option '-c [scriptname]' to print out a script.

2006-05-26  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, dm_imaputil.c:
	properly descend into multipart containing rfc822 subpart

2006-05-24  Aaron Stone  <aaron@serendipity.cx>

	* misc.c:
	dm_stresc should not check the returns values of g_new0 or
	db_string_escape; there's nothing to check for (closes bug #352).

2006-05-23  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/control, debian/dbmail-dev.files, 
	  debian/dbmail-dev.install, debian/dbmail-ldap.files, 
	  debian/dbmail-ldap.install, debian/dbmail-mysql.files, 
	  debian/dbmail-mysql.install, debian/dbmail-pgsql.files, 